reduce-memory-leak-and-fixes-0.8.0-context-details